--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -134,7 +134,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/yNmerP/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/ICz7uDv.png" alt="Random Quotes">
+              <img src="http://i.imgur.com/ICz7uDv.png" alt="Random Quote Generator">
               <h2 class="gray-text">Random Quote Generator</h2>
             </a>
             <p class="gray-text">This site will display random quotes using the <a href="http://forismatic.com/" target="_blank" style="color: orange">Forismatic</a> API. You will then have the option to tweet it and share with others. You might need to edit the post before
@@ -146,7 +146,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/eNqKao" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather">
+              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather App">
               <h2 class="gray-text">Local Weather App</h2>
             </a>
             <p class="gray-text">This site will get your location from your IP address using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic information using the
@@ -172,7 +172,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/ZbGRzG/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/Oy0Wcj4.pngg" alt="Project 4">
+              <img src="http://i.imgur.com/Oy0Wcj4.pngg" alt="Twitchtv JSON API">
               <h2 class="gray-text">Twitchtv JSON API</h2>
             </a>
             <p class="gray-text">This app will use the Twitch TV JSON API and display a list of accounts, if they are closed it will display the right symbols and mention that the account has been closed, the same for offline and online streams. It will also display online
@@ -187,7 +187,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/xwqrro/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/ADwiUKn.png" alt="Random Quotes">
+              <img src="http://i.imgur.com/ADwiUKn.png" alt="FCC Camper News">
               <h2 class="gray-text">FCC Camper News</h2>
             </a>
             <p class="gray-text">This web app displays the hottes news from <a href="http://freecodecamp.com/news" target="_blank" style="color: orange">FreeCodeCamp</a> news. You have will see the username, the date it was posted, how many upvotes and the original link to
@@ -199,7 +199,7 @@
         <div class="col-md-3">
           <div class="well">
             <a href="http://codepen.io/Rafase282/full/eNqKao" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather">
+              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather App">
               <h2 class="gray-text">Local Weather App</h2>
             </a>
             <p class="gray-text">This site will get your location from your IP adress using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic infomration using the
@@ -211,15 +211,13 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="http://codepen.io/Rafase282/full/bVNmbP/" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/zSS2lMC.png" alt="Pomodoro Timer">
-              <h2 class="gray-text">Pomodoro Timer</h2>
+            <a href="http://codepen.io/Rafase282/full/BoRyEv/" class="thumbnail" target='_blank'>
+              <img src="http://i.imgur.com/dGGGIky.png" alt="Wikipedia Searcher">
+              <h2 class="gray-text">Wikipedia Searcher</h2>
             </a>
-            <p class="gray-text">This web app is great for productivity, it can sit in any corner of your screen, there is not even the need to keep it in view. Once you set the amount of time you want to work and how long you want to rest for, then just let it run and it
-              will keep looking until you stop it. You are also able to pause it in case you have to step aside from your work for a brief moment. It has a nice progression animation to let you know how much time you have left and the break and work progress
-              animation have different color to help you figure out in which one you should be if needed.</p>
+            <p class="gray-text">This app will use the wikipedia API to produce search on the fly on their database. You can also click a button to get a random wiki article. The app can easily be adjusted for any other MediaWiki installation.</p>
             <p class="gray-text">
-              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2, Canvas</p>
+              <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
         </div>
         <div class="col-md-3">
@@ -313,8 +311,7 @@
       </a>
       <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
     (<i class="fa fa-fire fa-fw"></i>)
-  </a>
-    </p>
+  </a></p>
   </footer>
 </body>
 
