Work in progress

--- a/Basic Front End Development Projects/Calculator/index.html
+++ b/Basic Front End Development Projects/Calculator/index.html
@@ -15,6 +15,83 @@
   <section>
     <h1>FreeCodeCamp</h1>
     <h2>Calculator</h2>
+    <div class="Frame">
+      <div class="tg-wrap">
+        <table class="tg">
+          <tr>
+            <th class="tg-a8gl" colspan="4">0</th>
+          </tr>
+          <tr>
+            <td class="tg-ftb4">
+              <button type="button" class="red">AC</button>
+            </td>
+            <td class="tg-lewp">
+              <button type="button" class="red">CE</button>
+            </td>
+            <td class="tg-ljlu">
+              <button type="button" id="mod">%</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button" id="division">÷</button>
+            </td>
+          </tr>
+          <tr>
+            <td class="tg-6dgb">
+              <button type="button">7</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">8</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">9</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button" id="mult">x</button>
+            </td>
+          </tr>
+          <tr>
+            <td class="tg-6dgb">
+              <button type="button">4</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">5</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">6</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button" id="minus">-</button>
+            </td>
+          </tr>
+          <tr>
+            <td class="tg-6dgb">
+              <button type="button">1</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">2</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button">3</button>
+            </td>
+            <td class="tg-6dgb" rowspan="2">
+              <br>
+              <button type="button" class="plus">+</button>
+            </td>
+          </tr>
+          <tr>
+            <td class="tg-6dgb">
+              <button type="button">0</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button" id="dec">.</button>
+            </td>
+            <td class="tg-6dgb">
+              <button type="button" id="eq">=</button>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </section>
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
@@ -36,8 +113,7 @@
       </a>
       <a href="http://www.freecodecamp.com/rafase282" target='_blank'>
     (<i class="fa fa-fire fa-fw"></i>)
-  </a>
-    </p>
+  </a></p>
   </footer>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
