--- a/Basic Front End Development Projects/Calculator/index.html
+++ b/Basic Front End Development Projects/Calculator/index.html
@@ -19,14 +19,14 @@
       <div class="tg-wrap">
         <table class="tg">
           <tr>
-            <th class="tg-a8gl" colspan="4">0</th>
+            <th class="tg-a8gl" colspan="4" id="result"></th>
           </tr>
           <tr>
             <td class="tg-ftb4">
-              <button type="button" class="red">AC</button>
+              <button type="button" class="red" id="clear-all">AC</button>
             </td>
             <td class="tg-lewp">
-              <button type="button" class="red">CE</button>
+              <button type="button" class="red" id="clear">CE</button>
             </td>
             <td class="tg-ljlu">
               <button type="button" id="mod">%</button>
@@ -37,13 +37,13 @@
           </tr>
           <tr>
             <td class="tg-6dgb">
-              <button type="button">7</button>
+              <button type="button" id="seven">7</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">8</button>
+              <button type="button" id="eight">8</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">9</button>
+              <button type="button" id="nine">9</button>
             </td>
             <td class="tg-6dgb">
               <button type="button" id="mult">x</button>
@@ -51,13 +51,13 @@
           </tr>
           <tr>
             <td class="tg-6dgb">
-              <button type="button">4</button>
+              <button type="button" id="four">4</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">5</button>
+              <button type="button" id="five">5</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">6</button>
+              <button type="button" id="six">6</button>
             </td>
             <td class="tg-6dgb">
               <button type="button" id="minus">-</button>
@@ -65,22 +65,22 @@
           </tr>
           <tr>
             <td class="tg-6dgb">
-              <button type="button">1</button>
+              <button type="button" id="one">1</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">2</button>
+              <button type="button" id="two">2</button>
             </td>
             <td class="tg-6dgb">
-              <button type="button">3</button>
+              <button type="button" id="three">3</button>
             </td>
             <td class="tg-6dgb" rowspan="2">
               <br>
-              <button type="button" class="plus">+</button>
+              <button type="button" class="plus" id="plus">+</button>
             </td>
           </tr>
           <tr>
             <td class="tg-6dgb">
-              <button type="button">0</button>
+              <button type="button" id="zero">0</button>
             </td>
             <td class="tg-6dgb">
               <button type="button" id="dec">.</button>
