--- a/Basic Front End Development Projects/Calculator/index.html
+++ b/Basic Front End Development Projects/Calculator/index.html
@@ -19,7 +19,7 @@
       <div class="tg-wrap">
         <table class="tg">
           <tr>
-            <th class="tg-a8gl" colspan="4" id="result">0</th>
+            <th class="tg-a8gl" colspan="4" id="result"></th>
           </tr>
           <tr>
             <td class="tg-ftb4">
