--- a/Basic Front End Development Projects/Portfolio/index.html
+++ b/Basic Front End Development Projects/Portfolio/index.html
@@ -198,13 +198,11 @@
         </div>
         <div class="col-md-3">
           <div class="well">
-            <a href="http://codepen.io/Rafase282/full/eNqKao" class="thumbnail" target='_blank'>
-              <img src="http://i.imgur.com/NVnCJK9.jpg" alt="Local Weather App">
-              <h2 class="gray-text">Local Weather App</h2>
+            <a href="http://codepen.io/Rafase282/full/RWVXXQ/" class="thumbnail" target='_blank'>
+              <img src="http://i.imgur.com/OiiwdG1.png" alt="Calculator">
+              <h2 class="gray-text">Calculator</h2>
             </a>
-            <p class="gray-text">This site will get your location from your IP adress using the <a href="http://ip-api.com" target="_blank" style="color: orange">IP-API.com</a> API. The use that information to get the current weather and other basic infomration using the
-              <a href="http://openweathermap.org/" target="_blank" style="color: orange">OpenWeatherMap</a> API. The user has the option to display the weather and wind speed using the Metric or Imperial system. It also changes backgroudn image depending
-              onthe temperature.</p>
+            <p class="gray-text">This calculator will allow you to do chain operations and get a proper answer thanks to the use of parentheses for more complex operations. It does cover the basic features of a calculator too. </p>
             <p class="gray-text">
               <strong>Technologies used:</strong> HTML5, CSS3, Boostrap3, jQuery2</p>
           </div>
