Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
 <a id="get-started-with-free-code-camp" class="anchor" href="#get-started-with-free-code-camp" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get Started with Free Code Camp</h2>
 
 <ol>
-<li>Waypoint: Learn how Free Code Camp Works Incomplete</li>
-<li>Waypoint: Create a GitHub Account and Join our Chat Rooms Incomplete</li>
-<li>Waypoint: Configure your Public Profile Incomplete</li>
-<li>Waypoint: Try our Wiki and Camper News Incomplete</li>
-<li>Waypoint: Join a Campsite in Your City Incomplete</li>
-<li>Waypoint: Join our Alumni Network and Commit to Your Goal Incomplete</li>
-<li>Waypoint: Learn What to Do If You Get Stuck</li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-learn-how-free-code-camp-works">Waypoint: Learn how Free Code Camp Works Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-create-a-github-account-and-join-our-chat-rooms">Waypoint: Create a GitHub Account and Join our Chat Rooms Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-configure-your-code-portfolio">Waypoint: Configure your Public Profile Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-join-a-campsite-in-your-city">Waypoint: Join a Campsite in Your City Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-learn-what-to-do-if-you-get-stuck">Waypoint: Learn What to Do If You Get Stuck</a></li>
 </ol>
 
 <h2>
@@ -173,6 +171,16 @@
 </ol>
 
 <h2>
+<a id="gear-up-for-success" class="anchor" href="#gear-up-for-success" aria-hidden="true"><span class="octicon octicon-link"></span></a>Gear up for Success</h2>
+
+<ol>
+<li><a href="http://freecodecamp.com/challenges/waypoint-browse-camper-news">Waypoint: Browse Camper News Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-reference-our-wiki">Waypoint: Reference our Wiki Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-join-our-linkedin-alumni-network">Waypoint: Join our LinkedIn Alumni Network Incomplete</a></li>
+<li><a href="http://freecodecamp.com/challenges/waypoint-commit-to-a-goal-and-a-nonprofit">Waypoint: Commit to a Goal and a Nonprofit</a></li>
+</ol>
+
+<h2>
 <a id="jquery" class="anchor" href="#jquery" aria-hidden="true"><span class="octicon octicon-link"></span></a>jQuery</h2>
 
 <ol>
@@ -283,18 +291,6 @@
 </ol>
 
 <h2>
-<a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Set-for-Ziplines">Waypoint: Get Set for Ziplines</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Personal-Portfolio-Webpage">Zipline: Build a Personal Portfolio Webpage</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Random-Quote-Machine">Zipline: Build a Random Quote Machine</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Show-the-Local-Weather">Zipline: Show the Local Weather</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Pomodoro-Clock">Zipline: Build a Pomodoro Clock</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Use-the-Twitch.tv-JSON-API">Zipline: Use the Twitch.tv JSON API</a></li>
-</ol>
-
-<h2>
 <a id="intermediate-algorithm-scripting" class="anchor" href="#intermediate-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Intermediate Algorithm Scripting</h2>
 
 <ol>
@@ -319,6 +315,36 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Binary-Agents">Bonfire: Binary Agents</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Everything-Be-True">Bonfire: Everything Be True</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Bonfire-Arguments-Optional">Bonfire: Arguments Optional</a></li>
+</ol>
+
+<h2>
+<a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
+
+<ol>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Set-for-Ziplines">Waypoint: Get Set for Ziplines</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Personal-Portfolio-Webpage">Zipline: Build a Personal Portfolio Webpage</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Random-Quote-Machine">Zipline: Build a Random Quote Machine</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Show-the-Local-Weather">Zipline: Show the Local Weather</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Pomodoro-Clock">Zipline: Build a Pomodoro Clock</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Use-the-Twitch.tv-JSON-API">Zipline: Use the Twitch.tv JSON API</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-JavaScript-Calculator">Zipline: Build a JavaScript Calculator</a></li>
+</ol>
+
+<h2>
+<a id="intermediate-front-end-development-projects" class="anchor" href="#intermediate-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Intermediate Front End Development Projects</h2>
+
+<ol>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Stylize-Stories-on-Camper-News">Zipline: Stylize Stories on Camper News</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Wikipedia-Viewer">Zipline: Wikipedia Viewer</a></li>
+<li>Zipline: Build a Tic Tac Toe Game</li>
+<li>Zipline: Build a Simon Game</li>
+</ol>
+
+<h2>
+<a id="claim-your-front-end-development-certificate" class="anchor" href="#claim-your-front-end-development-certificate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Claim Your Front End Development Certificate</h2>
+
+<ol>
+<li><a href="http://freecodecamp.com/challenges/waypoint-claim-your-front-end-development-certificate">Waypoint: Claim Your Front End Development Certificate</a></li>
 </ol>
 
 <h2>
@@ -353,7 +379,7 @@
 <h2>
 <a id="angularjs" class="anchor" href="#angularjs" aria-hidden="true"><span class="octicon octicon-link"></span></a>AngularJS</h2>
 
-<ol>
+<ul>
 <li>
 <p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Started-with-Angular.js">Waypoint: Get Started with Angular.js</a></p>
 
@@ -372,21 +398,10 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Apply-Angularjs-Directives#filters">Filters</a></li>
 </ul>
 </li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Power-Forms-with-Angularjs">Waypoint: Power Forms with Angular.js</a></li>
+<li><p><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Power-Forms-with-Angularjs">Waypoint: Power Forms with Angular.js</a></p></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Customize-Angularjs-Directives">Waypoint: Customize Angular.js Directives</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Create-Angularjs-Services">Waypoint: Create Angular.js Services</a></li>
-</ol>
-
-<h2>
-<a id="intermediate-front-end-development-projects" class="anchor" href="#intermediate-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Intermediate Front End Development Projects</h2>
-
-<ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Stylize-Stories-on-Camper-News">Zipline: Stylize Stories on Camper News</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Wikipedia-Viewer">Zipline: Wikipedia Viewer</a></li>
-<li>Zipline: Build a JavaScript Calculator</li>
-<li>Zipline: Build a Tic Tac Toe Game</li>
-<li>Zipline: Build a Simon Game</li>
-</ol>
+</ul>
 
 <h2>
 <a id="git" class="anchor" href="#git" aria-hidden="true"><span class="octicon octicon-link"></span></a>Git</h2>
@@ -423,6 +438,13 @@
 <li>Basejump: Chart the Stock Market</li>
 <li>Basejump: Manage a Book Trading Club</li>
 <li>Basejump: Build a Pinterest Clone</li>
+</ol>
+
+<h2>
+<a id="claim-your-full-stack-development-certificate" class="anchor" href="#claim-your-full-stack-development-certificate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Claim Your Full Stack Development Certificate</h2>
+
+<ol>
+<li>Waypoint: Claim Your Full Stack Development Certificate</li>
 </ol>
         </section>
 
