--- a/Intermediate Front End Development Projects/TicTacToe/index.html
+++ b/Intermediate Front End Development Projects/TicTacToe/index.html
@@ -13,26 +13,34 @@
 
 <body>
 
-  <section>
+  <section class="container">
     <h1>FreeCodeCamp</h1>
     <h2>Tic Tac Toe</h2>
+    <h3>Play as
+      <button type="button" class="btn btn-primary icon" id="x">X</button>
+      or
+      <button type="button" class="btn btn-primary icon" id="o">O</button>
+      ?
+    </h3>
     <div class="board">
       <div class="row">
-        <div class="col-sm-2 field" id="r1c1"></div>
-        <div class="col-sm-2 field" id="r1c2"></div>
-        <div class="col-sm-2 field" id="r1c3"></div>
+        <div class="col-xs-1 field" id="r1c1"></div>
+        <div class="col-xs-1 field" id="r1c2"></div>
+        <div class="col-xs-1 field" id="r1c3"></div>
       </div>
       <div class="row">
-        <div class="col-sm-2 field" id="r2c1"></div>
-        <div class="col-sm-2 field" id="r2c2"></div>
-        <div class="col-sm-2 field" id="r2c3"></div>
+        <div class="col-xs-1 field" id="r2c1"></div>
+        <div class="col-xs-1 field" id="r2c2"></div>
+        <div class="col-xs-1 field" id="r2c3"></div>
       </div>
       <div class="row">
-        <div class="col-sm-2 field" id="r3c1"></div>
-        <div class="col-sm-2 field" id="r3c2"></div>
-        <div class="col-sm-2 field" id="r3c3"></div>
+        <div class="col-xs-1 field" id="r3c1"></div>
+        <div class="col-xs-1 field" id="r3c2"></div>
+        <div class="col-xs-1 field" id="r3c3"></div>
       </div>
     </div>
+    <h3> Score!
+      <br> <a href="#">Player <span class="badge">0</span></a> <a href="#">Machine <span class="badge">0</span></a></h3>
   </section>
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
