Edits to the looks

--- a/Intermediate Front End Development Projects/TicTacToe/index.html
+++ b/Intermediate Front End Development Projects/TicTacToe/index.html
@@ -14,8 +14,7 @@
 <body>
 
   <section class="container">
-    <h1>FreeCodeCamp</h1>
-    <h2>Tic Tac Toe</h2>
+    <h1>Janken pon!</h1>
     <h3>Play as
       <button type="button" class="btn btn-primary icon" id="x">X</button>
       or
@@ -40,7 +39,10 @@
       </div>
     </div>
     <h3> Score!
-      <br> <a href="#">Player <span class="badge">0</span></a> <a href="#">Machine <span class="badge">0</span></a></h3>
+      <br>
+      <a href="#">Player <span class="badge">0</span></a>
+      <a href="#">Machine <span class="badge">0</span></a>
+    </h3>
   </section>
   <footer>
     <p>Copyright © Rafael J. Rodriguez 2015. All Rights Reserved</p>
