--- a/Intermediate Front End Development Projects/TicTacToe/index.html
+++ b/Intermediate Front End Development Projects/TicTacToe/index.html
@@ -40,8 +40,8 @@
     </div>
     <h3> Score!
       <br>
-      <a href="#">Player <span class="badge">0</span></a>
-      <a href="#">Machine <span class="badge">0</span></a>
+      <a href="#">Player <span class="badge player X">0</span></a>
+      <a href="#">Machine <span class="badge machine O">0</span></a>
     </h3>
   </section>
   <footer>
