Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-for-loops">Waypoint: Iterate with JavaScript While Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-while-loops">Waypoint: Generate Random Fractions with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-fractions-with-javascript">Waypoint: Generate Random Whole Numbers with JavaScript</a></li>
+<li>Waypoint: Add New Properties to a JavaScript Object Complete</li>
+<li>Waypoint: Delete Properties from a JavaScript Object Complete</li>
+<li>Waypoint: Iterate with JavaScript For Loops</li>
+<li>Waypoint: Iterate Odd Numbers With a For Loop Incomplete</li>
+<li>Waypoint: Count Backwards With a For Loop</li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-whole-numbers-within-a-range">Waypoint: Generate Random Whole Numbers within a Range</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-conditional-logic-with-if-else-statements">Waypoint: Use Conditional Logic with If-Else Statements</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#sift-through-text-with-regular-expressions">Waypoint: Sift through Text with Regular Expressions</a></li>
@@ -296,6 +301,19 @@
 </ol>
 
 <h2>
+<a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
+
+<ol>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Set-for-Ziplines">Waypoint: Get Set for Ziplines</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Personal-Portfolio-Webpage">Zipline: Build a Personal Portfolio Webpage</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Random-Quote-Machine">Zipline: Build a Random Quote Machine</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Show-the-Local-Weather">Zipline: Show the Local Weather</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Pomodoro-Clock">Zipline: Build a Pomodoro Clock</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Use-the-Twitch.tv-JSON-API">Zipline: Use the Twitch.tv JSON API</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-JavaScript-Calculator">Zipline: Build a JavaScript Calculator</a></li>
+</ol>
+
+<h2>
 <a id="intermediate-algorithm-scripting" class="anchor" href="#intermediate-algorithm-scripting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Intermediate Algorithm Scripting</h2>
 
 <ol>
@@ -323,16 +341,16 @@
 </ol>
 
 <h2>
-<a id="basic-front-end-development-projects" class="anchor" href="#basic-front-end-development-projects" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Front End Development Projects</h2>
+<a id="json-apis-and-ajax-" class="anchor" href="#json-apis-and-ajax-" aria-hidden="true"><span class="octicon octicon-link"></span></a>JSON APIs and Ajax  </h2>
 
 <ol>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-Set-for-Ziplines">Waypoint: Get Set for Ziplines</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Personal-Portfolio-Webpage">Zipline: Build a Personal Portfolio Webpage</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Random-Quote-Machine">Zipline: Build a Random Quote Machine</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Show-the-Local-Weather">Zipline: Show the Local Weather</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Pomodoro-Clock">Zipline: Build a Pomodoro Clock</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Use-the-Twitch.tv-JSON-API">Zipline: Use the Twitch.tv JSON API</a></li>
-<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-JavaScript-Calculator">Zipline: Build a JavaScript Calculator</a></li>
+<li>Waypoint: Trigger Click Events with jQuery Incomplete</li>
+<li>Waypoint: Change Text with Click Events Incomplete</li>
+<li>Waypoint: Get JSON with the jQuery getJSON Method Incomplete</li>
+<li>Waypoint: Convert JSON Data to HTML Incomplete</li>
+<li>Waypoint: Render Images from Data Sources Incomplete</li>
+<li>Waypoint: Prefilter JSON Incomplete</li>
+<li>Waypoint: Get Geo-location Data</li>
 </ol>
 
 <h2>
