Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 <ol>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Stylize-Stories-on-Camper-News">Zipline: Stylize Stories on Camper News</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Wikipedia-Viewer">Zipline: Wikipedia Viewer</a></li>
-<li>Zipline: Build a Tic Tac Toe Game</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Zipline-Build-a-Tic-Tac-Toe-Game">Zipline: Build a Tic Tac Toe Game</a></li>
 <li>Zipline: Build a Simon Game</li>
 </ol>
 
