--- a/Intermediate Front End Development Projects/TicTacToe/index.html
+++ b/Intermediate Front End Development Projects/TicTacToe/index.html
@@ -16,9 +16,9 @@
   <section class="container">
     <h1>Janken pon!</h1>
     <h3>Play as
-      <button type="button" class="btn btn-primary icon" id="x">X</button>
+      <button type="button" class="btn btn-primary icon" id="X">X</button>
       or
-      <button type="button" class="btn btn-primary icon" id="o">O</button>
+      <button type="button" class="btn btn-primary icon" id="O">O</button>
       ?
     </h3>
     <div class="board">
@@ -40,8 +40,11 @@
     </div>
     <h3> Score!
       <br>
-      <a href="#">Player <span class="badge player X">0</span></a>
-      <a href="#">Machine <span class="badge machine O">0</span></a>
+      <p>Player
+        <span class="badge player X">0</span>
+        Machine
+        <span class="badge machine O">0</span>
+      </p>
     </h3>
   </section>
   <footer>
