Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -242,11 +242,11 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-for-loops">Waypoint: Iterate with JavaScript While Loops</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#iterate-with-javascript-while-loops">Waypoint: Generate Random Fractions with JavaScript</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-fractions-with-javascript">Waypoint: Generate Random Whole Numbers with JavaScript</a></li>
-<li>Waypoint: Add New Properties to a JavaScript Object Complete</li>
-<li>Waypoint: Delete Properties from a JavaScript Object Complete</li>
-<li>Waypoint: Iterate with JavaScript For Loops</li>
-<li>Waypoint: Iterate Odd Numbers With a For Loop Incomplete</li>
-<li>Waypoint: Count Backwards With a For Loop</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Add-New-Properties-to-a-JavaScript-Object">Waypoint: Add New Properties to a JavaScript Object</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Delete-Properties-from-a-JavaScript-Object">Waypoint: Delete Properties from a JavaScript Object</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-with-JavaScript-For-Loops">Waypoint: Iterate with JavaScript For Loops</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Iterate-Odd-Numbers-With-a-For-Loop">Waypoint: Iterate Odd Numbers With a For Loop</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Count-Backwards-With-a-For-Loop">Waypoint: Count Backwards With a For Loop</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#generate-random-whole-numbers-within-a-range">Waypoint: Generate Random Whole Numbers within a Range</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#use-conditional-logic-with-if-else-statements">Waypoint: Use Conditional Logic with If-Else Statements</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Basic-JavaScript#sift-through-text-with-regular-expressions">Waypoint: Sift through Text with Regular Expressions</a></li>
@@ -344,12 +344,12 @@
 <a id="json-apis-and-ajax-" class="anchor" href="#json-apis-and-ajax-" aria-hidden="true"><span class="octicon octicon-link"></span></a>JSON APIs and Ajax  </h2>
 
 <ol>
-<li>Waypoint: Trigger Click Events with jQuery Incomplete</li>
-<li>Waypoint: Change Text with Click Events Incomplete</li>
-<li>Waypoint: Get JSON with the jQuery getJSON Method Incomplete</li>
-<li>Waypoint: Convert JSON Data to HTML Incomplete</li>
-<li>Waypoint: Render Images from Data Sources Incomplete</li>
-<li>Waypoint: Prefilter JSON Incomplete</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Trigger-Click-Events-with-jQuery">Waypoint: Trigger Click Events with jQuery Incomplete</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Change-Text-with-Click-Events">Waypoint: Change Text with Click Events</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-JSON-with-the-jQuery-getJSON-Method">Waypoint: Get JSON with the jQuery getJSON Method</a></li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Convert-JSON-Data-to-HTML">Waypoint: Convert JSON Data to HTM</a></li>
+<li>Waypoint: Render Images from Data Sources</li>
+<li>Waypoint: Prefilter JSON</li>
 <li>Waypoint: Get Geo-location Data</li>
 </ol>
 
