Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Change-Text-with-Click-Events">Waypoint: Change Text with Click Events</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Get-JSON-with-the-jQuery-getJSON-Method">Waypoint: Get JSON with the jQuery getJSON Method</a></li>
 <li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Convert-JSON-Data-to-HTML">Waypoint: Convert JSON Data to HTM</a></li>
-<li>Waypoint: Render Images from Data Sources</li>
+<li><a href="https://github.com/Rafase282/My-FreeCodeCamp-Code/wiki/Waypoint-Render-Images-from-Data-Sources">Waypoint: Render Images from Data Sources</a></li>
 <li>Waypoint: Prefilter JSON</li>
 <li>Waypoint: Get Geo-location Data</li>
 </ol>
